--- a/index.html
+++ b/index.html
@@ -15,11 +15,7 @@
 
             <p class = "apresentacao__conteudo__texto">Olá! Sou Luís Felipe, desenvolvedor Front-end com especialidade em React, HTML e CSS. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
             <div class = "apresentacao__links">
-<<<<<<< HEAD
-                <h2 class = "apresentacao__links__subtitulos">Acesse minhas instagram: </h2>
-=======
-                <h2 class = "apresentacao__links__subtitulos">Acesse minhas redes: </h2>
->>>>>>> parent of 225bde8 (quarto commit)
+                <h2 class = "apresentacao__links__subtitulos">Acesse minhas redes sociais do melhor programdor do mundo: </h2>
 
                 <a class="apresentacao__links__link" href="https://github.com/lipeslr">
                     <img src = "assets/linkedin.png"  >
